--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,13 +1,3 @@
-.home-category img {
-  width: 100%;
-}
-
-@media only screen and (min-width: 1920px) {
-  .home-category img {
-    width: calc(100% / 3);
-  }
-}
-
 /* * our categories  */
 .category-name {
   font-size: 18px;
@@ -189,10 +179,11 @@
   top: calc(25% + 1px) !important;
 }
 .container-carousel {
-  /* background-color: red; */
-  width: 95%;
-  margin: auto;
+  width: 95% !important;
+  margin: auto !important;
+  /* padding: 100px; */
 }
+
 .container-carousel .react-multiple-carousel__arrow--left {
   left: -9px !important;
   top: calc(25% + 1px) !important;
@@ -210,25 +201,40 @@
   color: #000000 !important;
 }
 
-/* @media only screen and (min-width: 1225px) {
-  .container-carousel .react-multiple-carousel__arrow--right {
-    right: 3px !important;
-    top: calc(25% + 1px) !important;
-  }
-} */
-@media only screen and (min-width: 1400px) {
-  .container-carousel .react-multiple-carousel__arrow--right {
-    right: 32px !important;
-    top: calc(25% + 1px) !important;
+@media only screen and (min-width: 1224px) {
+  .home-category img {
+    width: 100%;
   }
 }
+@media only screen and (min-width: 1440px) {
+  .home-category {
+    width: calc(100% / 3);
+  }
+  .home-category img {
+    width: 100%;
+  }
+  .container-carousel {
+    width: 100% !important;
+    margin: auto !important;
+    display: flex !important;
+    justify-content: center;
+    /* padding: 100px; */
+  }
+  .react-multi-carousel-track {
+    margin-left: 10px !important;
+  }
+  .react-multi-carousel-list {
+    width: 90% !important;
+  }
 
-/* Large screens ----------- */
-@media only screen and (min-width: 1824px) {
-  /* Styles */
   .container-carousel .react-multiple-carousel__arrow--right {
-    right: 21px !important;
+    right: 5px !important;
 
+    top: calc(25% + 1px) !important;
+  }
+
+  .container-carousel .react-multiple-carousel__arrow--left {
+    left: -3px !important;
     top: calc(25% + 1px) !important;
   }
 }
